@@ -1,10 +1,10 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 4e79babcc6f1c1e84f3c26793db77a7d ChangeLog 1531
+MD5 54d73d59ebadc97fb16fc86900a62527 ChangeLog 1738
 MD5 ed1c8a94add02640c0b860edb1c3071e epos-2.5.23-r1.ebuild 755
 MD5 050ab8f1df8b68e12e804df6698c533d metadata.xml 231
-MD5 81984ec2a52fc0f9734dfd47aec6536b epos-2.5.35-r1.ebuild 1194
+MD5 1abf7aa6cc42593bbac510325e30cafd epos-2.5.35-r1.ebuild 1287
 MD5 d41676ea75dabd569433cfca8d1f2bf2 files/README.gentoo 108
 MD5 44bb6900b1cf61e43f4397bacc00adf1 files/digest-epos-2.5.23-r1 63
 MD5 ab56a6d2d8704c792114afd7bbf3743a files/epos 546
@@ -16,7 +16,7 @@ MD5 365c1b4554293b822779986973f88ac5 files/epos-2.5.35-sysportaudio.patch 1517
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (GNU/Linux)
 
-iD8DBQFC4MfvArHZZzCEUG0RAsvDAJsHR8iNpL3pxUkLfqjco4G6NdFwKwCePhIx
-VWazg7x1rUHBdyHkLq271mc=
-=D9oz
+iD8DBQFC4qS6ArHZZzCEUG0RAuQKAJ0WPVJJGNVhQ2xGkIqmkQpAwB6M+wCdECNK
+dl8U3efZ9TThIBgexBmWbN0=
+=2wLI
 -----END PGP SIGNATURE-----
